src/objects/NonLNETourBudget__c.object
<CustomObject>
    <description>Tour marketing budgets funded by 3rd-party sponsors</description>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tour__c</fullName>
        <label>Tour</label>
        <referenceTo>Tour__c</referenceTo>
        <relationshipLabel>Non-LNE Tour Budgets</relationshipLabel>
        <relationshipName>NonLNETourBudgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Sponsor does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Sponsor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Non-LNE Tour Budgets</relationshipLabel>
        <relationshipName>NonLNETourBudgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fxBudget__c</fullName>
        <formula>(Budget__c / (Tour__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Budget (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Non-LNE Tour Budget</label>
    <nameField>
        <displayFormat>NLTB-{000000}</displayFormat>
        <label>Non-LNE Tour Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-LNE Tour Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>